--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.7.1",
+    "@types/react": "^18.2.13",
+    "@types/react-dom": "^18.2.6",
+    "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^9.0.0",
