--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.2",
     "nodemon": "^2.0.22",
+    "react-toastify": "^9.1.3",
     "sequelize": "^6.32.0"
   },
   "scripts": {
