--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
   "type": "module",
   "dependencies": {
-    "@apollo/server": "^4.7.1",
+    "@apollo/server": "^4.7.4",
+    "@graphql-tools/schema": "^10.0.0",
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
     "bcryptjs": "^2.4.3",
-    "graphql": "^16.6.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "graphql": "^16.7.1",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.14.0",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.1.2",
-    "nodemon": "^2.0.22",
+    "nodemon": "^1.14.9",
     "react-toastify": "^9.1.3",
-    "sequelize": "^6.32.0"
+    "sequelize": "^6.32.0",
+    "ts-node": "^10.9.1",
+    "ws": "^8.13.0"
   },
   "scripts": {
-    "start": "npx nodemon server.js --ignore client/ & cd ./client && npm run dev "
+    "compile": "tsc",
+    "start": "npm run compile && npx nodemon ./dist/index.js --ignore client/ & cd ./client && npm run dev "
   },
   "name": "sansumessaging",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "react-router-dom": "^6.12.0"
+    "@types/node": "^20.3.1",
+    "react-router-dom": "^6.12.0",
+    "typescript": "^5.1.3"
   }
 }
