Added back context and fixed CORS.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "scripts": {
     "compile": "tsc",
-    "start": "npm run compile && npx nodemon ./dist/index.js --ignore client/ & cd ./client && npm run dev "
+    "start-client": "cd ./client && npm run dev ",
+    "start-server": "npm run compile && npx nodemon ./dist/index.js "
   },
   "name": "sansumessaging",
   "version": "1.0.0",
