--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.0",
     "jsonwebtoken": "^9.0.0",
-    "mariadb": "^3.1.2",
+    "mariadb": "^3.2.0",
     "nodemon": "^1.14.9",
     "react-toastify": "^9.1.3",
-    "sequelize": "^6.32.0",
+    "sequelize": "^6.32.1",
     "ts-node": "^10.9.1",
     "ws": "^8.13.0"
   },
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/node": "^20.3.1",
     "react-router-dom": "^6.12.0",
+    "sequelize-cli": "^6.6.1",
     "typescript": "^5.1.3"
   }
 }
