--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Development files
 node_modules
 dist
 dist-ssr
@@ -14,7 +15,7 @@ dist-ssr
 .directory
 /config/config.json
 /config/env.json
-/client/src/App copy.tsx
+public/
 
 # Editor directories and files
 .vscode/*
