--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.18.2",
     "graphql": "^16.7.1",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-upload": "^16.0.2",
     "graphql-ws": "^5.14.0",
     "jsonwebtoken": "^9.0.0",
     "mariadb": "^3.2.0",
@@ -19,6 +20,7 @@
     "react-toastify": "^9.1.3",
     "sequelize": "^6.32.1",
     "ts-node": "^10.9.1",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   },
   "scripts": {
