--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "rootDirs": ["src"],
-    "outDir": "",
+    "outDir": "src",
     "lib": ["es2020"],
     "target": "es2020",
     "module": "esnext",
